Feature: Remove unnecessary migrations
