# app/api/v2/entities/user.rb
@@ -84,12 +84,6 @@ module API
                  type: String
                }
 
-        expose :country_of_residence,
-               documentation: {
-                 desc: 'country of residence',
-                 type: String
-               }
-
         expose :last_country,
                documentation: {
                    desc: 'Last IP Geolocation.',
